--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ssdev.saeedsina.lostfound">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MyClasses.MyApplication"
         android:allowBackup="true"
@@ -16,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MyActivities.RegisterActivity_"></activity>
+        <activity android:name=".MyActivities.RegisterActivity_" />
+        <activity android:name=".MyActivities.MenuActivity_"></activity>
     </application>
 
 </manifest>
