--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     apt "org.androidannotations:androidannotations:4.1.0"
     compile "org.androidannotations:androidannotations-api:4.1.0"
     compile 'com.wrapp.floatlabelededittext:library:0.0.6'
+    compile 'com.ogaclejapan.arclayout:library:1.1.0@aar'
 }
