--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,21 +5,22 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".MyClasses.MyApplication"
+        android:name=".MyClasses.MyApplication_"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MyActivities.MainActivity_">
+
+        </activity>
+        <activity android:name=".MyActivities.RegisterActivity_" />
+        <activity android:name=".MyActivities.MenuActivity_">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MyActivities.RegisterActivity_" />
-        <activity android:name=".MyActivities.MenuActivity_"></activity>
     </application>
 
 </manifest>
