--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MyActivities.MainActivity_">
-
-        </activity>
+        <activity android:name=".MyActivities.MainActivity_"></activity>
         <activity android:name=".MyActivities.RegisterActivity_" />
         <activity android:name=".MyActivities.MenuActivity_">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MyActivities.SubmitLostActivity_"></activity>
     </application>
 
 </manifest>
