--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ssdev.saeedsina.lostfound">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -11,7 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MyActivities.MainActivity_"></activity>
+        <activity android:name=".MyActivities.MainActivity_" />
         <activity android:name=".MyActivities.RegisterActivity_" />
         <activity android:name=".MyActivities.MenuActivity_">
             <intent-filter>
@@ -20,7 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MyActivities.SubmitLostActivity_"></activity>
+        <activity android:name=".MyActivities.SubmitLostActivity_" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAX94KmuhrWlrcVzYp15CfG9RLEcp-nLQo" />
     </application>
 
 </manifest>
