--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "24.0.3"
 
     defaultConfig {
         applicationId "com.ssdev.saeedsina.lostfound"
@@ -47,21 +47,17 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.backtory.android:backtorysdk:0.2.2'
-    compile 'com.android.support:support-v4:24.2.0'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+
+
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.backtory.android:backtorysdk:0.3.0'
+    compile 'com.android.support:support-v4:25.0.1'
     compile 'com.github.rey5137:material:1.2.4'
-    apt "org.androidannotations:androidannotations:4.1.0"
-    compile "org.androidannotations:androidannotations-api:4.1.0"
     compile 'com.wrapp.floatlabelededittext:library:0.0.6'
     compile 'com.ogaclejapan.arclayout:library:1.1.0@aar'
     compile 'com.google.code.gson:gson:2.4'
-    compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
-    compile 'org.springframework.android:spring-android-core:1.0.1.RELEASE'
-    compile 'org.androidannotations:rest-spring-api:4.0.0'
-    apt "org.androidannotations:rest-spring:4.0.0"
     compile 'com.mohamadamin:persianmaterialdatetimepicker:1.2.1'
-    compile 'com.google.android.gms:play-services-maps:9.4.0'
+    compile 'com.google.android.gms:play-services-maps:10.0.0'
+    testCompile 'junit:junit:4.12'
 }
